# trmnl-dashboard

./: .env.example  .gitignore  .gitmessage  Dockerfile  LICENSE  README.md  README_DE.md  Worksteps_DE.md  changes.txt  docker-compose.yml  main.py  pyproject.toml
.github/: COMMIT_CONVENTION.md  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  dependency-update.yml  renovate.json
app/: __init__.py  app.py
app/static/: style.css
app/templates/: image.html  index.html
tests/: __init__.py  test_app.py
